--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "org.fruct.oss.getssupplementapp"
+        applicationId "org.fruct.oss.getssupplement"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 9
