--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.fruct.oss.getssupplementapp" >
+    package="org.fruct.oss.getssupplement" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.GetsTheme" >
 
         <activity
-            android:name=".MapActivity"
+            android:name="org.fruct.oss.getssupplement.MapActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,21 +27,21 @@
         </activity>
 
         <activity
-            android:name=".AddNewPointActivity"
+            android:name="org.fruct.oss.getssupplement.AddNewPointActivity"
             android:label="@string/title_activity_add_new_point"
-            android:parentActivityName=".MapActivity"
+            android:parentActivityName="org.fruct.oss.getssupplement.MapActivity"
             android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
-            android:name=".CategoryActivity"
+            android:name="org.fruct.oss.getssupplement.CategoryActivity"
             android:label="@string/title_activity_category"
-            android:parentActivityName=".MapActivity">
+            android:parentActivityName="org.fruct.oss.getssupplement.MapActivity">
         </activity>
 
         <activity
-            android:name=".LoginActivity"
+            android:name="org.fruct.oss.getssupplement.LoginActivity"
             android:label="@string/title_activity_login"
-            android:parentActivityName=".MapActivity" >
+            android:parentActivityName="org.fruct.oss.getssupplement.MapActivity" >
         </activity>
 
     </application>
